--- a/view/includes/footer.ejs
+++ b/view/includes/footer.ejs
@@ -1,1 +1,12 @@
 
+<div class="main-footer">
+    <div class="f-icon">
+        <i class="fa-brands fa-facebook" id="icon-1"></i>
+        <i class="fa-brands fa-whatsapp" id="icon-2"></i>
+        <i class="fa-brands fa-linkedin" id="icon-3"></i>
+    </div>
+    <div class="f-heading"> Wanderlust private limited </div>
+    <div class="f-policy"> privacy term </div>
+
+</div>
+
