--- a/view/includes/flash.ejs
+++ b/view/includes/flash.ejs
@@ -1,1 +1,13 @@
 
+<% if(success && success.length) { %>
+    <div class="alert alert-success text-center col-6 offset-3 " role="alert">
+<%= success %>
+</div>
+<%}%>
+
+
+<% if(error && error.length) { %>
+    <div class="alert alert-danger text-center col-6 offset-3 " role="alert">
+<%= error %>
+</div>
+<%}%>
