--- a/view/listings/edit.ejs
+++ b/view/listings/edit.ejs
@@ -1,1 +1,52 @@
 
+  <% layout("/layouts/boilerplate") %>
+  <body> 
+    <div class="row">
+      <div class="col-8 offset-2 ">
+    <h3 class="heading-new-listing">Edit your Listing</h3>
+
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+    <div>
+      <label for="title" class="form-label"> Title </label>
+      <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required/>
+      <div class="valid-feedback"> Title required </div>
+    </div>
+    
+    <div>
+      <label for="description" class="form-label"> Description</label>
+      <textarea name="listing[description]" class="form-control"> <%= listing.description %></textarea>
+    </div>  
+    <div>
+      <label for="image" class="form-label"> Image URL </label>
+      <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" />
+      <div class="valid-feedback"> URL required </div>
+    </div>
+
+    <div class="row">
+    <div class="md-3 col-4">
+      <label for="price" class="form-label"> Price </label>
+      <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required/>
+      <div class="valid-feedback"> Price required </div>
+    </div>
+
+    <div class="md-3 col-8">
+      <label for="country" class="form-label"> Country </label> 
+      <input name="listing[country]" value="<%= listing.country %>"   type="text" class="form-control" required/>
+      <div class="valid-feedback"> Country required </div>
+    </div>
+    </div>
+    
+    <div>
+      <label for="location" class="form-label"> Location </label>
+      <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required/>
+      <div class="valid-feedback"> Location required </div>
+    </div>
+    
+
+    <button class="btn btn-outline-dark"> EDIT NOW</button>
+
+    </form>
+    </div>
+    </div>
+    <script src="/javascript/script.js"></script>
+  </body>
