--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -1,1 +1,32 @@
 
+<% layout("/layouts/boilerplate") %>
+
+<body>
+    <br/> 
+    <h3 class="nav-link text-center" style="font-size: 28px;">All Listings</h3>
+<hr>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <% for (let listing of allListings) { %>
+            
+            <div class="col-md"> 
+                <a href="/listings/<%= listing._id %>">
+                    <div class="card" >
+                        <img src="<%= listing.image %>" class="card-img-top" alt="listing_img"> 
+                        <div class="card-body">
+                            <p class="card-text">
+                                <%= listing.title %>
+                                <br/>
+                                <div class="price">
+                                    ₹ <%= listing.price%> / night
+                                </div>
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        <% } %>
+    </div> 
+    <br/>  <br/>  <br/>   
+</body>
+
+ 
